# croc-fit

./: .gitignore  .prettierignore  AGENTS.md  AGENT_WORKLOG.md  AGENT_WORKLOG.template.md  CHANGELOG.md  Makefile  PRD.md  README.md  cliff.toml  render.yaml
.devcontainer/: devcontainer.json
.github/agents/: developer.agent.md  fastapi-reviewer.agent.md  pm.agent.md  python-reviewer.agent.md  security-audit.agent.md
.github/instructions/: core-agent-workflow.instructions.md  core-behavior.instructions.md  core-common-errors.instructions.md  core-communication.instructions.md  core-conventions.instructions.md  core-review-checklist.instructions.md  core-security.instructions.md  docs.instructions.md  fastapi.instructions.md  python.instructions.md
.github/workflows/: release.yml  security-scheduled.yml  security.yml
croc-fit-api/: .env.example  .gitignore  README.md  main.py  pyproject.toml
croc-fit-api/src/croc_fit_api/: __main__.py  app.py  main.py  server.py  settings.py
croc-fit-api/src/croc_fit_api/api/v1/: attachments.py  biometrics.py  chat.py  health.py  insights.py  nutrition.py  prs.py  router.py  workouts.py
croc-fit-api/src/croc_fit_api/connectors/: supabase.py
croc-fit-api/src/croc_fit_api/errors/: base.py  handlers.py
croc-fit-api/src/croc_fit_api/schemas/: models.py
croc-fit-api/src/croc_fit_api/tools/: biometrics.py  nutrition.py  prs.py  safety.py  workouts.py
croc-fit-api/tests/: conftest.py  test_api.py  test_tools.py
croc-fit-app/: .env.example  .env.production  .gitignore  app.config.json  app.json  eas.json  package-lock.json  package.json  tsconfig.json  vercel.json
croc-fit-app/app/: +html.tsx  _layout.tsx
croc-fit-app/components/: VoiceInputButton.tsx
supabase/: .gitignore  seed.sql
(+38 files in other folders)
