[project]
name = "croc-fit-api"
version = "1.1.0"
description = "CrocFit Coach AI — FastAPI backend with agent-core"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.9.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.12",
    "litellm>=1.50.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "agent-core @ git+https://github.com/HNRG-Lab/agent-core.git@v2.0.3",
    "langchain-groq>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/croc_fit_api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH", "RUF"]
# B008: FastAPI Body/Query/File in defaults is the canonical pattern — not a bug
# ANN401: Any is required for agent-core dynamic bundle type
ignore = ["B008", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["croc_fit_api"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
